# Diabetes_Prediction

./: README.md  app.py  pyproject.toml  requirements.txt
model/: XGBclfmodel.pkl  robust_scaler.pkl  xgb_clf.pkl
notebook/: Daibetes_prediction.ipynb
src/: logger.py  main.py  model.py
templates/: home.html  result.html
