[tool.poetry]
name = "repl_nix_DiabetesPrediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
imblearn = "^0.0"
numpy = "^1.25.0"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
xgboost = "^1.7.6"
Flask = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
